# CASE-UCO-Libraries

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  ONTOLOGY_REFERENCE.md  README.md  SECURITY.md  requirements.txt
.cursor/: mcp.json
.cursor/rules/: case-uco-sdk.mdc  extension-authoring.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  rust-security.yml
change_proposals/: add-blake3-to-hashnamevocab.jsonld  add-blake3-to-hashnamevocab.md  add-blake3-to-hashnamevocab.sparql  capability-namespace-shapes.ttl  capability-namespace.jsonld  capability-namespace.md  capability-namespace.sparql  capability-namespace.ttl  cryptocurrency-address-and-sanctions-designation.jsonld  cryptocurrency-address-and-sanctions-designation.md  cryptocurrency-address-and-sanctions-designation.sparql  cryptocurrency-address-and-sanctions-designation.ttl
csharp/: CaseUco.sln
csharp/CaseUco/: CaseGraph.cs  CaseUco.csproj  OntologyRegistry.cs  ReferenceEqualityComparer.cs  _registry.json
csharp/CaseUco.Smoke/: CaseUco.Smoke.csproj  Program.cs
csharp/CaseUco.Tests/: CaseGraphTests.cs  CaseUco.Tests.csproj  ExhaustiveInstantiationTests.cs
csharp/CaseUco/Case/: Investigation.cs
csharp/CaseUco/Uco/: Action.cs  Analysis.cs  Configuration.cs  Core.cs  Identity.cs  Location.cs  Marking.cs  Observable.cs  Pattern.cs  Role.cs  Tool.cs  Types.cs  Victim.cs
docs/: CROSS_LANGUAGE_PARITY.md  ECOSYSTEM.md  MAPPING_GUIDE.md  PERFORMANCE_GUIDE.md  RECIPES.md
docs/recipes/: INDEX.md  ai-analysis-pipeline.md  analysis.md  change-proposal.md  cross-domain-extensions.md  cybertip-ncmec-workflow.md  existence-intervals.md  extensions.md  file-system.md  grooming-chat-modeling.md  large-datasets.md  mobile-device.md  starter-email-export.md  starter-filesystem-report.md  starter-mobile-extraction.md  starter-tool-run.md  usn-journal.md
docs/templates/: change-proposal-template.md
example_agentmcp_outputs/: usn_journal.jsonld  usn_journal_example.py
examples/: snapchat-grooming-cybertip.jsonld
extensions/: manifest-schema.json
extensions/aeo/: README.md  manifest.json
extensions/cac/: README.md  manifest.json
extensions/toolcap/: README.md  example_capability_matrix.py  toolcap-exemplar.ttl  toolcap-shapes.ttl  toolcap.ttl
generator/: pyproject.toml
generator/src/case_uco_generator/: __init__.py  __main__.py  cli.py  explorer.py  mapping_guide.py  ontology_parser.py  scaffold.py  schema_model.py
generator/src/case_uco_generator/backends/: base.py  csharp_backend.py  docs_backend.py  java_backend.py  python_backend.py  rust_backend.py
generator/tests/: test_ontology_parser.py
java/: pom.xml
java/src/main/java/org/caseontology/: CaseGraph.java  OntologyRegistry.java  SmokeTest.java
java/src/main/java/org/caseontology/_case/investigation/: ExaminerActionLifecycle.java
java/src/main/java/org/caseontology/case/investigation/: Attorney.java  Authorization.java  Examiner.java  Investigation.java  InvestigativeAction.java  Investigator.java  ProvenanceRecord.java  Subject.java  SubjectActionLifecycle.java  VictimActionLifecycle.java
java/src/main/java/org/caseontology/uco/action/: Action.java  ActionArgumentFacet.java  ActionEstimationFacet.java  ActionFrequencyFacet.java  ActionLifecycle.java  ActionPattern.java  (+1 more)
java/src/test/java/org/caseontology/: CaseGraphTest.java  ExhaustiveInstantiationTest.java
mcp_server/: README.md  domain_index.py  server.py
python/: pyproject.toml
python/case_uco/: __init__.py  _concept_index.json  graph.py  registry.py
python/case_uco/case/: __init__.py  investigation.py
python/case_uco/uco/: __init__.py  action.py  analysis.py  configuration.py  core.py  identity.py  location.py  marking.py  observable.py  pattern.py  role.py  tool.py  types.py  victim.py
python/tests/: test_exhaustive.py  test_graph.py  test_registry.py
rust/: Cargo.toml
rust/examples/: smoke.rs
rust/src/: graph.rs  lib.rs  registry.rs
rust/src/case/: investigation.rs  mod.rs
rust/src/uco/: action.rs  analysis.rs  configuration.rs  core.rs  identity.rs  location.rs  marking.rs  mod.rs  observable.rs  pattern.rs  role.rs  tool.rs  types.rs  victim.rs
rust/tests/: exhaustive_test.rs  graph_test.rs
scripts/: sparql_test.py  test_doc_snippets.py  validate_extension.py
(+413 files in other folders)
