[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-uco"
version = "0.1.0"
description = "Standard library for constructing CASE/UCO ontology graphs"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "rdflib>=7.0.0",
    "cdo-local-uuid>=0.5.0",
]

[project.optional-dependencies]
validation = ["case-utils>=0.15.0"]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["case_uco*"]
