[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-uco"
version = "0.1.0"
description = "Standard library for constructing CASE/UCO ontology graphs"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "rdflib>=7.0.0",
    "cdo-local-uuid>=0.5.0",
]

[project.optional-dependencies]
validation = ["case-utils>=0.15.0"]
dev = ["pytest>=7.0.0", "mypy>=1.0"]

[tool.setuptools.packages.find]
include = ["case_uco*"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "case_uco.uco.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = "case_uco.case.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = "rdflib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cdo_local_uuid.*"
ignore_missing_imports = true
